--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -12,6 +12,9 @@
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
     "\n",
     "calendar = pd.read_csv('./seattle/calendar.csv')\n",
     "listings = pd.read_csv('./seattle/listings.csv')\n",
@@ -20,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
@@ -109,7 +112,7 @@
        "4      241032  2016-01-08         f     NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +378,7 @@
        "[5 rows x 92 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +495,7 @@
        "4  Kelly was a great host and very accommodating ...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +826,7 @@
        "[8 rows x 30 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +873,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,20 +884,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Determine market price for listing based on:\n",
-    "#  - transit, zipcode, latitude, longitude, accomodates, bathrooms, bedrooms, beds, square_feet\n",
-    "#  - host_since, host_is_superhost\n",
-    "\n",
-    "def clean_fit_linear_mod(df, response_col, cat_cols, dummy_na, test_size=.3, rand_state=42):\n",
+    "def clean_fit_linear_mod(df, response_col, dummy_na, test_size=.3, rand_state=42):\n",
     "    '''\n",
     "    INPUT:\n",
     "    df - a dataframe holding all the variables of interest\n",
     "    response_col - a string holding the name of the column \n",
-    "    cat_cols - list of strings that are associated with names of the categorical columns\n",
     "    dummy_na - Bool holding whether you want to dummy NA vals of categorical columns or not\n",
     "    test_size - a float between [0,1] about what proportion of data should be in the test dataset\n",
     "    rand_state - an int that is provided as the random state for splitting the data into training and test \n",
@@ -905,31 +903,25 @@
     "    lm_model - model object from sklearn\n",
     "    X_train, X_test, y_train, y_test - output from sklearn train test split used for optimal model\n",
     "    \n",
-    "    Your function should:\n",
-    "    1. Drop the rows with missing response values\n",
-    "    2. Drop columns with NaN for all the values\n",
-    "    3. Use create_dummy_df to dummy categorical columns\n",
-    "    4. Fill the mean of the column for any missing values \n",
-    "    5. Split your data into an X matrix and a response vector y\n",
-    "    6. Create training and test sets of data\n",
-    "    7. Instantiate a LinearRegression model with normalized data\n",
-    "    8. Fit your model to the training data\n",
-    "    9. Predict the response for the training data and the test data\n",
-    "    10. Obtain an rsquared value for both the training and test data\n",
+    "    Code adapted from Udacity Data Scientist Nanodegree course \n",
     "    '''\n",
+    "    #Copy the dataframe\n",
+    "    df = df.copy()\n",
+    "    \n",
+    "    #Get catagorical columns from the dataframe\n",
+    "    cat_cols = df.select_dtypes(include=['object']).columns\n",
+    "\n",
     "    #Drop the rows with missing response values\n",
     "    df  = df.dropna(subset=[response_col], axis=0)\n",
     "\n",
     "    #Drop columns with all NaN values\n",
     "    df = df.dropna(how='all', axis=1)\n",
-    "\n",
+    "    \n",
     "    #Dummy categorical variables\n",
-    "    df = create_dummy_df(df, cat_cols, dummy_na)\n",
-    "\n",
-    "    # Mean function\n",
-    "    fill_mean = lambda col: col.fillna(col.mean())\n",
+    "    df = pd.get_dummies(df, prefix=cat_cols)\n",
+    "    \n",
     "    # Fill the mean\n",
-    "    df = df.apply(fill_mean, axis=0)\n",
+    "    df = df.fillna(df.mean())\n",
     "\n",
     "    #Split into explanatory and response variables\n",
     "    X = df.drop(response_col, axis=1)\n",
@@ -949,11 +941,41 @@
     "    test_score = r2_score(y_test, y_test_preds)\n",
     "    train_score = r2_score(y_train, y_train_preds)\n",
     "\n",
-    "    return test_score, train_score, lm_model, X_train, X_test, y_train, y_test\n",
-    "\n",
-    "\n",
-    "#Test your function with the above dataset\n"
+    "    return test_score, train_score, lm_model, X_train, X_test, y_train, y_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/linear_model/_base.py:533: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  linalg.lstsq(X, y)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine market price for listing based on:\n",
+    "#  - transit, zipcode, latitude, longitude, accomodates, bathrooms, bedrooms, beds, square_feet\n",
+    "#  - host_since, host_is_superhost\n",
+    "df = listings.copy()\n",
+    "df['price'] = df['price'].apply(lambda x: float(x[1:].replace(',', '')))\n",
+    "response_col = 'price'\n",
+    "dummy_na = False\n",
+    "\n",
+    "test_score, train_score, lm_model, X_train, X_test, y_train, y_test = clean_fit_linear_mod(df, response_col, dummy_na)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
