added section headers to notebook

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,12 +11,13 @@
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt # visualizations\n",
     "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression # Linear modeling\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "\n",
+    "# Data from AirBnB seattle. Only listings is used\n",
     "calendar = pd.read_csv('./seattle/calendar.csv')\n",
     "listings = pd.read_csv('./seattle/listings.csv')\n",
     "reviews = pd.read_csv('./seattle/reviews.csv')"
@@ -31,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import Functions from Udacity Data Scientist Nanodegree course \n",
+    "# Import Functions from Udacity Data Scientist Nanodegree course to create linear models. \n",
     "def clean_fit_linear_mod(df, response_col, dummy_na, test_size=.3, rand_state=42):\n",
     "    '''\n",
     "    INPUT:\n",
@@ -106,6 +107,13 @@
     "    coefs_df['abs_coefs'] = np.abs(lm_model.coef_)\n",
     "    coefs_df = coefs_df.sort_values('abs_coefs', ascending=False)\n",
     "    return coefs_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at the data, get an Idea of what it has"
    ]
   },
   {
@@ -752,6 +760,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -995,23 +1010,6 @@
     "# Remove columns I don't care about (have no effect on data, will cause overfitting)\n",
     "\n",
     "df = listings.copy()\n",
-    "# keep_cols = [\n",
-    "#        'host_response_time',\n",
-    "#        'host_response_rate', 'host_acceptance_rate', 'host_is_superhost',\n",
-    "#        'host_listings_count', 'host_total_listings_count',\n",
-    "#        'host_verifications', 'neighbourhood_group_cleansed',\n",
-    "#        'is_location_exact', 'property_type', 'room_type', 'accommodates',\n",
-    "#        'bathrooms', 'bedrooms', 'beds', 'bed_type', 'amenities', 'square_feet',\n",
-    "#        'price', 'security_deposit', 'cleaning_fee', \n",
-    "#        'guests_included', 'extra_people', 'minimum_nights',\n",
-    "#        'maximum_nights', 'availability_365', 'number_of_reviews', \n",
-    "#        'review_scores_rating', 'review_scores_accuracy', 'review_scores_cleanliness',\n",
-    "#        'review_scores_checkin', 'review_scores_communication',\n",
-    "#        'review_scores_location', 'review_scores_value', 'requires_license',\n",
-    "#        'license', 'instant_bookable', 'cancellation_policy', \n",
-    "#        'require_guest_profile_picture', 'require_guest_phone_verification',\n",
-    "#        'calculated_host_listings_count', 'reviews_per_month'\n",
-    "#        ]\n",
     "keep_cols = [\n",
     "       'host_response_time',\n",
     "       'host_response_rate', 'host_acceptance_rate', 'host_is_superhost',\n",
@@ -1028,19 +1026,9 @@
     "       'require_guest_profile_picture', 'require_guest_phone_verification',\n",
     "       'calculated_host_listings_count', 'reviews_per_month'\n",
     "       ]\n",
-    "# keep_cols = [\n",
-    "#        'host_response_time', 'host_is_superhost',\n",
-    "#        'host_listings_count', 'host_has_profile_pic', 'host_identity_verified',\n",
-    "#        'neighbourhood_group_cleansed',\n",
-    "#        'property_type', 'room_type', 'accommodates',\n",
-    "#        'bathrooms', 'bedrooms', 'beds', 'bed_type', 'square_feet',\n",
-    "#        'price', 'security_deposit', 'cleaning_fee', 'number_of_reviews',\n",
-    "#        'review_scores_rating', 'review_scores_value', 'availability_365'\n",
-    "#        ]\n",
-    "\n",
     "df = df[keep_cols]\n",
     "\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -1370,14 +1358,16 @@
     }
    ],
    "source": [
-    "# Clean up the typing of columns\n",
+    "# Clean up the typing of columns, convert strings to float\n",
+    "\n",
+    "# $85.00 -> 85.00\n",
     "def parse_dollar(x):\n",
     "    if not pd.isnull(x):\n",
-    "#         print(x)\n",
     "        return float(x[1:].replace(',', ''))\n",
     "    else:\n",
     "        return None\n",
-    "    \n",
+    "\n",
+    "# 63% -> 63\n",
     "def parse_percent(x):\n",
     "    if not pd.isnull(x):\n",
     "        return float(x[:-1])\n",
@@ -1407,6 +1397,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer questions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -1431,7 +1428,7 @@
     }
    ],
    "source": [
-    "### Q1\n",
+    "### Q1. What is the market price for my property?\n",
     "example_property = df.loc[(df['neighbourhood_group_cleansed'] == 'Queen Anne')]\n",
     "example_property = example_property.loc[(df['bedrooms'] == 2) & (df['bathrooms'] == 2)]\n",
     "example_property['price'].describe()"
@@ -1464,12 +1461,17 @@
     }
    ],
    "source": [
-    "### Q2a\n",
+    "### Q2. What factors contribute most to properties being selected?\n",
+    "\n",
+    "# Analyze the correlation of each numeric variable to availability_365 \n",
+    "#   availability_365 = how many days of the year is the property not booked)\n",
+    "\n",
     "df_corr = df.corr()\n",
     "df_corr = df_corr['availability_365'].round(2)\n",
-    "df_corr = pd.DataFrame({'correlation': df_corr, 'magnitude': df_corr.apply(np.abs)})\n",
-    "df_corr.sort_values('magnitude', ascending=False)['correlation'].head(11)[1:]\n",
-    "# sns.heatmap(df_choice.corr(), annot=True, fmt=\".2f\");"
+    "\n",
+    "# sort by absolute value and display the first 10\n",
+    "df_corr = pd.DataFrame({'correlation': df_corr, 'magnitude': df_corr.apply(np.abs)}) \n",
+    "df_corr.sort_values('magnitude', ascending=False)['correlation'].head(11)[1:] # remove correlation to itself"
    ]
   },
   {
@@ -1491,7 +1493,7 @@
     }
    ],
    "source": [
-    "### Q2b\n",
+    "### Q2b. For the highest correlation value, is there any significance?\n",
     "df.plot(x='calculated_host_listings_count', y='availability_365', kind='scatter').get_figure().savefig('Q2b.png')"
    ]
   },
@@ -1514,9 +1516,18 @@
     }
    ],
    "source": [
-    "### Q3a\n",
+    "### Q3. What would the best list price for this property be?\n",
     "example_property = df.loc[(df['bedrooms'] == 2) & (df['bathrooms'] == 2)]\n",
     "example_property.plot(x='price', y='availability_365', kind='scatter').get_figure().savefig('Q3a.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Attempt to fit a linear model to the data to predict availability\n",
+    "This was ultimately unsuccessfull as there are no significant linear correlations in the data.\n",
+    "The test score represents a very bad fit to the data."
    ]
   },
   {
